<resources>
    <string name="app_name">OneMatchProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="welcome_to_the_one_match_project">Welcome to One Match</string>
    <string name="button_login">Login</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="action_logout">Logout</string>
    <string name="save">Save</string>
    <string name="saveText">Ver cancha</string>
    <string name="permission_denied_explanation">Grant location permission in order to load the map near your location.</string>
    <string name="settings">Settings</string>
    <string name="option_delantero">Delantero</string>
    <string name="option_mediocampista">MedioCampista</string>
    <string name="option_defensa">Defensa</string>
    <string name="option_arquero">Arquero</string>
    <string name="posicion_predilecta">Posicion predilecta</string>
    <string name="menu_single_field">Single_Field</string>
    <string name="seleccione_dia_de_interes">Seleccione Día de Interes</string>
    <string name="five_to_six">17:00 - 18:00</string>
    <string name="six_to_seven">18:00 - 19:00</string>
    <string name="seven_to_eight">19:00 - 20:00</string>
    <string name="eight_to_nine">20:00 - 21:00</string>
    <string name="jugadores">Jugadores</string>
    <string name="equipo_1">Equipo 1</string>
    <string name="equipo_2">Equipo 2</string>
    <string name="elija_horario_de_interes">Elija horario de interes</string>
    <string name="select_a_comuna">Select a Comuna</string>
    <string name="comuna_maipu">Maipu</string>
    <string name="comuna_estacion_central">Estacion Central</string>
    <string name="comuna_santiago_centro">Santiago Centro</string>
    <string name="loading">loading_fields</string>
    <string-array name="days">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
        <string name="googlepay_button_content_description">Google Pay</string>
        <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
        <string name="donate_with_googlepay_button_content_description">Donate With Google Pay</string>
        <string name="pay_with_googlepay_button_content_description">Pay With Google Pay</string>
        <string name="subscribe_with_googlepay_button_content_description">Subscribe With Google Pay</string>
        <string name="book_with_googlepay_button_content_description">Book With Google Pay</string>
        <string name="checkout_with_googlepay_button_content_description">Checkout With Google Pay</string>
        <string name="order_with_googlepay_button_content_description">Order With Google Pay</string>
        <string name="view_in_googlepay_button_content_description">View In Google Pay</string>
</resources>