<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name = "viewModel"
            type = "com.example.android.onematchproject.ui.singleField.SingleFieldViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/elijaHorario_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elija_horario_de_interes"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginStart="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textField"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:layout_marginEnd="@dimen/space_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/elijaHorario_textView"
            tools:background="@color/black">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:hint="@string/seleccione_dia_de_interes" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/five_to_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:text="@string/five_to_six"
            app:layout_constraintBottom_toTopOf="@+id/six_to_seven"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <Button
            android:id="@+id/six_to_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:text="@string/six_to_seven"
            app:layout_constraintBottom_toTopOf="@+id/seven_to_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/five_to_six" />

        <Button
            android:id="@+id/seven_to_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:text="@string/seven_to_eight"
            app:layout_constraintBottom_toTopOf="@+id/eight_to_nine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/six_to_seven" />

        <Button
            android:id="@+id/eight_to_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:text="@string/eight_to_nine"
            app:layout_constraintBottom_toTopOf="@+id/nine_to_ten"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven_to_eight" />

        <Button
            android:id="@+id/nine_to_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:text="21:00 - 22:00"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eight_to_nine" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seven_to_eight"
            app:layout_constraintTop_toBottomOf="@+id/textField">

            <LinearLayout
                android:id="@+id/layout_cardView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical"
                android:padding="@dimen/space_big">

                <TextView
                    android:id="@+id/tituloConTextoJugadores_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jugadores"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_big" />

                <View
                    android:id="@+id/separador1"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/separator" />

                <TextView
                    android:id="@+id/tituloConTextoEquipo1_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/equipo_1"
                    android:textColor="@color/black" />

                <View
                    android:id="@+id/separador2"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/separator" />

                <TextView
                    android:id="@+id/player0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <View
                    android:id="@+id/separador3"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/separator" />

                <TextView
                    android:id="@+id/tituloConTextoEquipo2_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/equipo_2"
                    android:textColor="@color/black" />

                <View
                    android:id="@+id/separador4"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/separator" />

                <TextView
                    android:id="@+id/player5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

                <TextView
                    android:id="@+id/player9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    tools:text="@string/jugadores" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/equipo1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Inscribirme en \n equipo 1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/equipo2_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/equipo2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Inscribirme en \n equipo 2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/equipo1_button"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <include
            android:id="@+id/googlePayButton"
            layout="@layout/buy_with_googlepay_button"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginBottom="@dimen/space_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipo2_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>